--- a/index.html
+++ b/index.html
@@ -159,6 +159,13 @@
   <br>
   <br>
   <br>
+
+<a href="http://www.quran-kurdish.tk" style="text-decoration:none"> <p> All Quran Kurdish Without Internet </p>
+  <a href="http://www.quran-kurdish.tk"> <img src="images/q.png" width="100"></a>
+  <br>
+  <br>
+  <br>
+
 </center>
 <div class="section px-3 px-lg-4 pt-5" id="skills">
   <div class="container-narrow">
