--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
   <br>
 
 <a href="http://www.quran-kurdish.tk" style="text-decoration:none"> <p> All Quran Kurdish Without Internet </p>
-  <a href="http://www.quran-kurdish.tk"> <img src="images/q.png" width="100"></a>
+  <a href="http://www.quran-kurdish.tk"> <img src="images/D0D9E394-B631-4573-BF36-ABDE9B1CFEC8.jpeg" width="100"></a>
   <br>
   <br>
   <br>
