--- a/index.html
+++ b/index.html
@@ -166,6 +166,13 @@
   <br>
   <br>
 
+<a href="https://www.regayislam.tk" style="text-decoration:none"> <p> Regay Islam </p>
+  <a href="https://www.regayislam.tk"> <img src="images/D0D9E394-B631-4573-BF36-ABDE9B1CFEC8.jpeg" width="100"></a>
+  <br>
+  <br>
+  <br>
+
+
 </center>
 <div class="section px-3 px-lg-4 pt-5" id="skills">
   <div class="container-narrow">
