--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
   <br>
 
 <a href="https://www.regayislam.tk" style="text-decoration:none"> <p> Regay Islam </p>
-  <a href="https://www.regayislam.tk"> <img src="images/D0D9E394-B631-4573-BF36-ABDE9B1CFEC8.jpeg" width="100"></a>
+  <a href="https://www.regayislam.tk"> <img src="https://i.ibb.co/myRB2SD/IMG-4266.png" width="100"></a>
   <br>
   <br>
   <br>
