--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <!-- upto 2 directory depth-->
 <html lang="en-US">
   <head>
+
+<meta name="title" content="Ibrahim Qadir">
+<meta name="description" content="The Best website for learning and project ">
+<meta name="keywords" content="Tech, Technology, android, ios, mobile ">
+<meta name="robots" content="index, follow">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="language" content="English">
+<meta name="author" content="Ibrahim Qadir">
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
