--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
   <br>
   <br>
   <br>
-  <a href="http://www.mediafire.com/file/uldnxpqb3iqfyce/%25D9%2582%25D9%2588%25D8%25B1%25D8%25A6%25D8%25A7%25D9%2586%25DB%258C_%25D9%25BE%25DB%258C%25D8%25B1%25DB%2586%25D8%25B2_%25D8%25A8%25DB%2595_%25D8%25AF%25DB%2595%25D9%2586%25DA%25AF.apk/file" style="text-decoration:none"><p>All Quran Kurdish Without Internet</p>
-  <a href="http://www.mediafire.com/file/uldnxpqb3iqfyce/%25D9%2582%25D9%2588%25D8%25B1%25D8%25A6%25D8%25A7%25D9%2586%25DB%258C_%25D9%25BE%25DB%258C%25D8%25B1%25DB%2586%25D8%25B2_%25D8%25A8%25DB%2595_%25D8%25AF%25DB%2595%25D9%2586%25DA%25AF.apk/file"> <img src="images/quran-kurdi.JPG" style=" border-radius: 15px;"width="100"></a>
+  <a href="http://www.quran-kurdish.tk/" style="text-decoration:none"><p>All Quran Kurdish Without Internet</p>
+  <a href="http://www.quran-kurdish.tk/"> <img src="images/quran-kurdi.JPG" style=" border-radius: 15px;"width="100"></a>
   <br>
   <br>
   <br>
@@ -165,12 +165,6 @@
   <br>
     <a href="https://www.mediafire.com/file/uvd5bcqio82y9mf/SULLTAN_Store.apk/file?fbclid=IwAR2MuupPIo73aabfbITlQpHYFE0cJqIaqGIuFevGhY-RcJafwRVOx8-JmkE" style="text-decoration:none"> <p>SULLTAN Store</p>
   <a href="https://www.mediafire.com/file/uvd5bcqio82y9mf/SULLTAN_Store.apk/file?fbclid=IwAR2MuupPIo73aabfbITlQpHYFE0cJqIaqGIuFevGhY-RcJafwRVOx8-JmkE"> <img src="images/sulltan.png" width="100"></a>
-  <br>
-  <br>
-  <br>
-
-<a href="http://www.quran-kurdish.tk" style="text-decoration:none"> <p> All Quran Kurdish Without Internet </p>
-  <a href="http://www.quran-kurdish.tk"> <img src="images/D0D9E394-B631-4573-BF36-ABDE9B1CFEC8.jpeg" width="100"></a>
   <br>
   <br>
   <br>
