--- a/index.html
+++ b/index.html
@@ -30,7 +30,25 @@
     <link href="./css/aos.css?ver=1.2.0" rel="stylesheet">
     <link href="./css/main.css?ver=1.2.0" rel="stylesheet">
 	<link rel="icon" type="image/x-icon" href="ibrahim.jpg">
-    <noscript>
+   
+
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4224091217258385"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-gx-5+29-24-33"
+     data-ad-client="ca-pub-4224091217258385"
+     data-ad-slot="4133547512"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+
+
+
+ <noscript>
       <style type="text/css">
         [data-aos] {
             opacity: 1 !important;
@@ -291,5 +309,6 @@
     <script src="./scripts/bootstrap.bundle.min.js?ver=1.2.0"></script>
     <script src="./scripts/aos.min.js?ver=1.2.0"></script>
     <script src="./scripts/main.js?ver=1.2.0"></script>
-  </body>
+  
+</body>
 </html>
