--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4224091217258385"
      crossorigin="anonymous"></script>
 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4224091217258385"
+     crossorigin="anonymous"></script>
+
 <meta name="title" content="Ibrahim Qadir">
 <meta name="description" content="The Best website for learning and project ">
 <meta name="keywords" content="Tech, Technology, android, ios, mobile ">
