--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
           </div>
 
           <div class="py-1">
-            <div class="d-flex text-small fw-bolder"><span class="me-auto">Microsoft Word </span><span>90%</span></div>
+            <div class="d-flex text-small fw-bolder"><span class="me-auto">Microsoft Office </span><span>90%</span></div>
             <div class="progress my-1">
               <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="600" data-aos-anchor=".skills-section" style="width: 90%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
