--- a/index.html
+++ b/index.html
@@ -169,9 +169,8 @@
   <br>
   <br>
   <br>
-
-<a href="https://www.regayislam.tk" style="text-decoration:none"> <p> Regay Islam </p>
-  <a href="https://www.regayislam.tk"> <img src="https://i.ibb.co/myRB2SD/IMG-4266.png" width="100"></a>
+    <a href="https://www.regayislam.tk/" style="text-decoration:none"> <p> Regay Islam </p>
+  <a href="https://www.regayislam.tk/"> <img src="https://i.ibb.co/myRB2SD/IMG-4266.png" width="100"></a>
   <br>
   <br>
   <br>
