--- a/index.html
+++ b/index.html
@@ -105,16 +105,16 @@
             <div class="pb-1 fw-bolder">Ibrahimdelizy11@gmail.com</div>
           </div>
           <div class="col-sm-2">
-            <div class="pb-1">Phone:</div>
+            <div class="pb-1">  </div>
           </div>
           <div class="col-sm-10">
-            <div class="pb-1 fw-bolder">+964 782 979 5496</div>
+            <div class="pb-1 fw-bolder">  </div>
           </div>
           <div class="col-sm-2">
-            <div class="pb-1">Address:</div>
+            <div class="pb-1">  </div>
           </div>
           <div class="col-sm-10">
-            <div class="pb-1 fw-bolder">Delizyan, Soran, Erbil</div>
+            <div class="pb-1 fw-bolder">  </div>
           </div>
 
         </div>
