--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- upto 2 directory depth-->
 <html lang="en-US">
   <head>
 
@@ -26,7 +25,7 @@
     <link href="./css/bootstrap.min.css?ver=1.2.0" rel="stylesheet">
     <link href="./css/aos.css?ver=1.2.0" rel="stylesheet">
     <link href="./css/main.css?ver=1.2.0" rel="stylesheet">
-	<link rel="icon" type="image/x-icon" href="ibrahim.jpg">
+	<link rel="icon" type="image/x-icon" href="5FCD3845-73EB-4F6A-946A-69D4E19CFBE2.jpeg">
    
  <noscript>
       <style type="text/css">
@@ -119,7 +118,7 @@
 
         </div>
       </div>
-      <div class="col-md-5 offset-md-1" data-aos="fade-left" data-aos-delay="100"><img class="avatar img-fluid mt-2" src="images/ibrahim.jpg" width="400" height="400" alt="ibrahemqadir"/></div>
+      <div class="col-md-5 offset-md-1" data-aos="fade-left" data-aos-delay="100"><img class="avatar img-fluid mt-2" src="5FCD3845-73EB-4F6A-946A-69D4E19CFBE2.jpeg" width="400" height="400" alt="ibrahemqadir"/></div>
     </div>
   </div>
 </div>
