--- a/index.html
+++ b/index.html
@@ -217,11 +217,19 @@
             </div>
           </div>
 		   <div class="py-1">
-            <div class="d-flex text-small fw-bolder"><span class="me-auto">C#</span><span>25%</span></div>
+            <div class="d-flex text-small fw-bolder"><span class="me-auto">C#</span><span>40%</span></div>
             <div class="progress my-1">
-              <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="600" data-aos-anchor=".skills-section" style="width: 25%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="600" data-aos-anchor=".skills-section" style="width: 40%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
+
+          <div class="py-1">
+            <div class="d-flex text-small fw-bolder"><span class="me-auto">Python </span><span>20%</span></div>
+            <div class="progress my-1">
+              <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="600" data-aos-anchor=".skills-section" style="width: 20%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+
 		   <div class="py-1">
             <div class="d-flex text-small fw-bolder"><span class="me-auto">Mobile Application</span><span>55%</span></div>
             <div class="progress my-1">
