--- a/index.html
+++ b/index.html
@@ -130,6 +130,12 @@
 <center>
       <h2 class="marker marker-center">My Projects</h2>
 
+
+<br>
+<br>
+<br>
+  <a href="https://www.xwendenga.tk/" style="text-decoration:none"> <p> Xwendenga </p>
+  <a href="https://www.xwendenga.tk/"> <img src="https://www.xwendenga.tk/ibo.png" width="100"></a>
 <br>
 <br>
 <br>
