--- a/yar1.html
+++ b/yar1.html
@@ -1,1 +1,4 @@
-<iframe width='300' height='185' frameborder='0' scrolling='no' allowfullscreen src="http://qanat.tv/1"></iframe>
+<p style='text-align:center;'><vedyo </p>
+<br>
+<br>
+<iframe width='300' height='250' frameborder='0' scrolling='no' allowfullscreen src="http://qanat.tv/1"></iframe>
