--- a/yar1.html
+++ b/yar1.html
@@ -1,4 +1,17 @@
-<p style='text-align:center;'><vedyo </p>
-<br>
-<br>
-<iframe width='300' height='250' frameborder='0' scrolling='no' allowfullscreen src="http://qanat.tv/1"></iframe>
+<style>
+
+.iframe-container {
+    position: relative;
+    overflow: hidden;
+    padding-top: 75%;
+}
+.iframe-container iframe {
+    position: absolute;
+    top: 0;
+    border: 0;
+    height: 100%;
+    width: 100%;
+}
+
+</style>
+<div class="iframe-container"><iframe border="0" loading="lazy" src="https://www.ibrahem.tk/yar1.html"></iframe></div>
