--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                   <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/ibrahimmm55" title="Facebook"><i class="fab fa-facebook"></i><span class="menu-title sr-only">Facebook</span></a></li>
                   <li class="nav-item"><a class="nav-link" href="https://instagram.com/ittz._ibo" title="Instagram"><i class="fab fa-instagram"></i><span class="menu-title sr-only">Instagram</span></a></li>
                   <li class="nav-item"><a class="nav-link" href="https://is.gd/oOa7HO" title="Snapchat"><i class="fab fa-snapchat-ghost"></i><span class="menu-title sr-only">snapchat-ghost</span></a></li>
-				  <li class="nav-item"><a class="nav-link" href="https://is.gd/Czd7kK" title="youtube"><i class="fab fa-youtube"></i><span class="menu-title sr-only">youtube</span></a></li>
+		  <li class="nav-item"><a class="nav-link" href="https://www.youtube.com/channel/UCpReFvryPQ5DVHQAVxgi0tA" title="youtube"><i class="fab fa-youtube"></i><span class="menu-title sr-only">youtube</span></a></li>
                   <li class="nav-item"><a class="nav-link" href="https://twitter.com/ibrahemqadir1" title="twitter"><i class="fab fa-twitter"></i><span class="menu-title sr-only">twitter</span></a></li>
                   <li class="nav-item"><a class="nav-link" href="https://t.me/ibrahimiphone" title="telegram"><i class="fab fa-telegram"></i><span class="menu-title sr-only">telegram</span></a></li>
                 </ul>
