--- a/kurdgpt.html
+++ b/kurdgpt.html
@@ -9,65 +9,70 @@
 	<link rel="image" href="icon.png" type="image/x-icon">
 
 
-    <style>
-	@font-face {
-  font-family: 'K24KurdishBold-Bold';
-  src: url('K24KurdishBold-Bold.woff') format('woff2');
-}
+<style>
+    @font-face {
+        font-family: 'K24KurdishBold-Bold';
+        src: url('K24KurdishBold-Bold.woff') format('woff2');
+    }
 
-body {
-  overflow: hidden;
-  margin: 0;
-  padding: 0;
-}
+    body {
+        overflow: hidden;
+        margin: 0;
+        padding: 0;
+    }
 
-header {
-  background-color: #ffffff;
-  position: fixed;
-  width: 100%;
-  height: 70px;
-  top: 0;
-  left: 0;
-  z-index: 999;
-}
+    .scrollable-section iframe {
+        width: 100%;
+        height: 200vh;
+        overflow: auto;
+    }
 
-.scrollable-section iframe {
-  width: 100%; /* Use full width on mobile */
-  height: 700px; /* Adjust the height as needed */
-  overflow: auto;
-}
+    header {
+        background-color: #ffffff;
+        position: fixed;
+        width: 100%;
+        height: 70px;
+        top: 0;
+        left: 0;
+        z-index: 999;
+    }
 
-footer {
-  background-color: #ffffff;
-  position: fixed;
-  width: 100%;
-  height: 20px;
-  bottom: 0;
-  left: 0;
-  z-index: 999;
-}
+    footer {
+        background-color: #ffffff;
+        position: fixed;
+        width: 100%;
+        height: 100px;
+        bottom: 0;
+        left: 0;
+        z-index: 999;
+    }
 
-h3,
-a {
-  font-family: 'K24KurdishBold-Bold';
-  margin-top: 20px;
-  text-decoration: none;
-  font-size: 17px;
-  line-height: 1.6em;
-}
+    h3,
+    a {
+        font-family: 'K24KurdishBold-Bold';
+        margin-top: 20px;
+        text-decoration: none;
+        font-size: 17px;
+        line-height: 1.6em;
+    }
 
-a {
-  color: blue;
-}
+    a {
+        color: blue;
+    }
 
-/* Media Query for Mobile Devices */
-@media (max-width: 480px) {
-  .scrollable-section iframe {
-    height: 790px;
-  }
-}
+    /* Responsive styles for mobile devices */
+    @media only screen and (max-width: 600px) {
+        .scrollable-section iframe {
+            width: 100%;
+            height: calc(100vh - 10px); /* Adjust the height as needed */
+        }
 
-    </style>
+        h3 {
+            font-size: 14px;
+        }
+    }
+</style>
+
 </head>
 
 <body>
