--- a/kurdgpt.html
+++ b/kurdgpt.html
@@ -9,70 +9,89 @@
 	<link rel="image" href="icon.png" type="image/x-icon">
 
 
-<style>
-    @font-face {
-        font-family: 'K24KurdishBold-Bold';
-        src: url('K24KurdishBold-Bold.woff') format('woff2');
-    }
+    <style>
+	@font-face {
+    font-family: 'K24KurdishBold-Bold';
+    src: url('K24KurdishBold-Bold.woff') format('woff2');
+}
 
-    body {
-        overflow: hidden;
-        margin: 0;
-        padding: 0;
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'K24KurdishBold-Bold';
+    background-color: #ffffff;
+    color: #000000;
+}
+
+header {
+    background-color: #ffffff;
+    position: fixed;
+    width: 100%;
+    height: 70px;
+    top: 0;
+    left: 0;
+    z-index: 999;
+}
+
+.scrollable-section iframe {
+    width: 100%;
+    height: calc(100vh - 90px);
+    overflow: auto;
+}
+
+footer {
+    background-color: #ffffff;
+    position: fixed;
+    width: 100%;
+    height: 130px;
+    bottom: 0;
+    left: 0;
+    z-index: 999;
+}
+
+h3,
+a {
+    margin-top: 20px;
+    text-decoration: none;
+    font-size: 17px;
+    line-height: 1.6em;
+}
+
+a {
+    color: blue;
+}
+
+@media (max-width: 768px) {
+    header {
+        height: 70px;
     }
 
     .scrollable-section iframe {
-        width: 100%;
-        height: 200vh;
-        overflow: auto;
+        height: calc(100vh - 60px);
+    }
+}
+
+@media (prefers-color-scheme: dark) {
+    body {
+        background-color: #000000;
+        color: #ffffff;
     }
 
     header {
-        background-color: #ffffff;
-        position: fixed;
-        width: 100%;
-        height: 70px;
-        top: 0;
-        left: 0;
-        z-index: 999;
+        background-color: #000000;
     }
 
     footer {
-        background-color: #ffffff;
-        position: fixed;
-        width: 100%;
-        height: 100px;
-        bottom: 0;
-        left: 0;
-        z-index: 999;
-    }
-
-    h3,
-    a {
-        font-family: 'K24KurdishBold-Bold';
-        margin-top: 20px;
-        text-decoration: none;
-        font-size: 17px;
-        line-height: 1.6em;
+        background-color: #000000;
     }
 
     a {
-        color: blue;
+        color: #ffffff;
     }
+}
 
-    /* Responsive styles for mobile devices */
-    @media only screen and (max-width: 600px) {
-        .scrollable-section iframe {
-            width: 100%;
-            height: calc(100vh - 25px); /* Adjust the height as needed */
-        }
 
-        h3 {
-            font-size: 14px;
-        }
-    }
-</style>
-
+    </style>
 </head>
 
 <body>
