--- a/kurdgpt.html
+++ b/kurdgpt.html
@@ -7,7 +7,8 @@
 	<meta name="description" content="KurdGPT is a new model of AI for some language and support kurdish created by ibrahim qadir mustafa">
     <meta name="viewport" content="width=device-width,initial-scale=1">
 	<link rel="image" href="icon.png" type="image/x-icon">
-
+	<link rel="stylesheet" href="https://linguagpt.com/styles/main.css">
+<link rel="stylesheet" href="https://linguagpt.com/styles/chat.css">
 
     <style>
 	@font-face {
