--- a/kurdgpt.html
+++ b/kurdgpt.html
@@ -7,88 +7,106 @@
 	<meta name="description" content="KurdGPT is a new model of AI for some language and support kurdish created by ibrahim qadir mustafa">
     <meta name="viewport" content="width=device-width,initial-scale=1">
 	<link rel="image" href="icon.png" type="image/x-icon">
-	<link rel="stylesheet" href="https://linguagpt.com/styles/main.css">
-<link rel="stylesheet" href="https://linguagpt.com/styles/chat.css">
-
+ 
     <style>
 	@font-face {
-    font-family: 'K24KurdishBold-Bold';
-    src: url('K24KurdishBold-Bold.woff') format('woff2');
+  font-family: 'K24KurdishBold-Bold';
+  src: url('K24KurdishBold-Bold.woff') format('woff2');
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    font-family: 'K24KurdishBold-Bold';
-    background-color: #ffffff;
-    color: #000000;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  color: #000;
+  background-color: #fff;
+  font-family: 'K24KurdishBold-Bold', sans-serif;
 }
 
 header {
-    background-color: #ffffff;
-    position: fixed;
-    width: 100%;
-    height: 70px;
-    top: 0;
-    left: 0;
-    z-index: 999;
-}
-
-.scrollable-section iframe {
-    width: 100%;
-    height: calc(100vh - 90px);
-    overflow: auto;
-}
-
-footer {
-    background-color: #ffffff;
-    position: fixed;
-    width: 100%;
-    height: 130px;
-    bottom: 0;
-    left: 0;
-    z-index: 999;
+  background-color: #ffffff;
+  position: fixed;
+  width: 100%;
+  height: 70px;
+  top: 0;
+  left: 0;
+  z-index: 999;
 }
 
 h3,
 a {
-    margin-top: 20px;
-    text-decoration: none;
-    font-size: 17px;
-    line-height: 1.6em;
+  margin-top: 20px;
+  text-decoration: none;
+  font-size: 17px;
+  line-height: 1.6em;
 }
 
 a {
-    color: blue;
+  color: blue;
 }
 
-@media (max-width: 768px) {
-    header {
-        height: 70px;
-    }
+.scrollable-section {
+  width: 100%;
+  padding-top: 90px;
+  padding-bottom: 30px;
+}
 
-    .scrollable-section iframe {
-        height: calc(100vh - 60px);
-    }
+iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+
+footer {
+  background-color: #ffffff;
+  position: fixed;
+  width: 100%;
+  height: 20px;
+  bottom: 0;
+  left: 0;
+  z-index: 999;
+}
+
+@media (min-width: 600px) {
+  .scrollable-section {
+    padding-top: 5px;
+    padding-bottom: 50px;
+  }
+
+  iframe {
+    width: 400px;
+    height: 780px;
+  }
 }
 
 @media (prefers-color-scheme: dark) {
-    body {
-        background-color: #000000;
-        color: #ffffff;
-    }
+  body {
+    color: #fff;
+    background-color: #222;
+  }
 
-    header {
-        background-color: #000000;
-    }
+  header {
+    background-color: #222;
+  }
 
-    footer {
-        background-color: #000000;
-    }
+  a {
+    color: #6f9bd8;
+  }
+}
 
-    a {
-        color: #ffffff;
-    }
+@media (prefers-color-scheme: light) {
+  body {
+    color: #000;
+    background-color: #fff;
+  }
+
+  header {
+    background-color: #ffffff;
+  }
+
+  a {
+    color: blue;
+  }
 }
 
 
