--- a/kurd.html
+++ b/kurd.html
@@ -29,6 +29,7 @@
             width: 420px; /* Adjust the width as needed */
             height: 780px; /* Adjust the height as needed */
             overflow: auto;
+		border: none;
         }
         
         header {
