--- a/kurd.html
+++ b/kurd.html
@@ -50,16 +50,17 @@
             z-index: 999;
         }
 
-        h4, a {
+        p, a {
             font-family: 'K24KurdishBold-Bold';
             margin-top: 20px;
-            text-decoration: none;
+            color: #B21e21;
             font-size: 17px;
             line-height: 1.6em;
         }
 
         a {
             color: blue;
+			text-decoration: none;
         }
 
         /* Light Mode */
@@ -107,7 +108,7 @@
 
 <body>
     <center>
-        <header><h4>KurdGPT : created by Ibrahim Qadir Mustafa Balaky  <br><a href="https://www.facebook.com/ibrahimmm55">Facebook</a></h3></header>
+        <header><p>KurdGPT : created by Ibrahim Qadir Mustafa Balaky  <br><a href="https://www.facebook.com/ibrahimmm55">Facebook</a></p></header>
 
         <div class="scrollable-section">
             <iframe loading="lazy" src="https://linguagpt.com/en/chat/?hideFooter=true" id="linguagpt-iframe" scrolling="No"></iframe>
