--- a/kurd.html
+++ b/kurd.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>KurdGPT</title>
+    <title>𝗚𝗣𝗧 𝗘𝗹𝗹𝗼 </title>
     <meta charset="utf-8">
     <meta name="author" content="Ibrahim Qadir Mustafa">
     <meta name="description" content="KurdGPT is a new model of AI for some language and support kurdish created by ibrahim qadir mustafa">
@@ -34,6 +34,13 @@
                 alert("You cannot view the source code.");
             }
         });
+    </script>    
+	
+	<script>
+       document.addEventListener('contextmenu', function(event) {
+  event.preventDefault(); // Prevent default right-click behavior
+  alert("Cannot view the source code");
+});
     </script>
 
     <style>
@@ -136,7 +143,7 @@
 
 <body>
     <center>
-        <header><p>KurdGPT : created by Ibrahim Qadir Mustafa Balaky  <br><a href="https://www.facebook.com/ibrahimmm55">Facebook</a></p></header>
+        <header><p><b>𝗚𝗣𝗧 𝗘𝗹𝗹𝗼 : Created by Ibrahim Qadir Mustafa Balaky </b> <br><a href="https://www.facebook.com/ibrahimmm55">Facebook</a>&nbsp;&nbsp; <a href="https://www.snapchat.com/add/sulltan.ibrahim">Snapchat</a></p></header>
 
         <div class="scrollable-section">
             <iframe loading="lazy" src="https://linguagpt.com/en/chat/?hideFooter=true" id="linguagpt-iframe" scrolling="No"></iframe>
